--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+async-timeout==4.0.2
 autopep8==1.6.0
 click==8.1.3
+Deprecated==1.2.13
 Flask==2.1.2
+flask-redis==0.4.0
+flask-swagger-ui==3.36.0
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+packaging==21.3
 pycodestyle==2.8.0
+pyparsing==3.0.8
 python-dotenv==0.20.0
+redis==4.2.2
 toml==0.10.2
 Werkzeug==2.1.2
+wrapt==1.14.0
 zipp==3.8.0
