feat(develop): error handling

--- a/src/static/paths/decrypt.yaml
+++ b/src/static/paths/decrypt.yaml
@@ -18,3 +18,5 @@ post:
             $ref: "../schemas/message.yaml"
           example:
             message: Hello
+    "400":
+      description: Only dashes, dots and spaces are allowed
