--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
 async-timeout==4.0.2
+attrs==21.4.0
 autopep8==1.6.0
 click==8.1.3
 Deprecated==1.2.13
 Flask==2.1.2
+flask-expects-json==1.7.0
 flask-redis==0.4.0
 flask-swagger-ui==3.36.0
 importlib-metadata==4.11.3
+importlib-resources==5.7.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.4.0
 MarkupSafe==2.1.1
 packaging==21.3
 pycodestyle==2.8.0
 pyparsing==3.0.8
+pyrsistent==0.18.1
 python-dotenv==0.20.0
 redis==4.2.2
 toml==0.10.2
